--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Portfolio</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -42,7 +42,7 @@
     <div class="sectionOne">
         <div class="imageHolder">
             <div class="holdImage">
-                <img src="Untitled design.png" alt="">
+                <img src="Rocat is coming to (1).png" alt="">
             </div>
         </div>
         <div class="textHolder">
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="imageHolder">
-                <img src="Rocat is coming to.png" alt="">
+                <img src="aboutImage.jpeg" alt="">
             </div>
         </div>
         
