--- a/Portfolio.html
+++ b/Portfolio.html
@@ -35,7 +35,7 @@
           </div>
     </div>
 
-    <div class="headerText" id="home">
+    <div class="headerTextt" id="home">
         
     </div>
 
