--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="Header.css">
     <link rel="stylesheet" href="Home.css">
     <link rel="stylesheet" href="Portfolio.css">
     <link rel="stylesheet" href="About.css">
     <link rel="stylesheet" href="Contact.css">
+
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -55,8 +59,11 @@
     </div>
 
     <div class="headerText" id="about">
-        <h1>
-            about ──────────────────────────────────────
+        <h1 class="text">
+            about 
+        </h1>
+        <h1 class="line">
+            ──────────────────────────────────────
         </h1>
     </div>
 
@@ -86,8 +93,11 @@
     </div>
 
     <div class="headerText" id="projects">
-        <h1>
-            ──────────────────────────────────── projects
+        <h1 class="line">
+            ──────────────────────────────────────
+        </h1>
+        <h1 class="text">
+            projects
         </h1>
     </div>
 
@@ -190,8 +200,11 @@
     </div>
 
     <div class="headerText" id="contact">
-        <h1>
-            contact ─────────────────────────────────────
+        <h1 class="text">
+            contact 
+        </h1>
+        <h1 class="line">
+            ──────────────────────────────────────
         </h1>
     </div>
     
