--- a/Portfolio.html
+++ b/Portfolio.html
@@ -45,9 +45,11 @@
 
     <div class="sectionOne">
         <div class="imageHolder">
-            <div class="holdImage">
+            <img src="Rocat is coming to (1).png" alt="">
+
+            <!-- <div class="holdImage">
                 <img src="Rocat is coming to (1).png" alt="">
-            </div>
+            </div> -->
         </div>
         <div class="textHolder">
             <h2>hi there! the name's</h2>
